--- a/package.json
+++ b/package.json
@@ -16,23 +16,24 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "browser-sync": "^2.17.5",
+    "browser-sync": "^2.18.2",
     "devbridge-perf-tool": "^0.1.39",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-cssnano": "^2.1.2",
-    "gulp-imagemin": "^3.0.3",
+    "gulp-imagemin": "^3.1.1",
     "gulp-newer": "^1.3.0",
     "gulp-notify": "^2.2.0",
     "gulp-postcss": "^6.2.0",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-uglify": "^2.0.0",
-    "postcss-cssnext": "^2.8.0",
-    "postcss-import": "^8.1.2",
+    "postcss-custom-properties": "^5.0.1",
+    "postcss-custom-selectors": "^3.0.0",
+    "postcss-import": "^8.2.0",
     "postcss-nested": "^1.0.0",
     "postcss-pxtorem": "^3.3.1",
-    "postcss-reporter": "^1.4.1",
-    "postcss-sorting": "^1.6.1",
-    "stylelint": "^7.5.0"
+    "postcss-reporter": "^2.0.0",
+    "postcss-sorting": "^1.7.0",
+    "stylelint": "^7.6.0"
   }
 }
