--- a/.stylelintrc
+++ b/.stylelintrc
@@ -117,7 +117,7 @@
         "selector-pseudo-class-no-unknown": true,
         "selector-pseudo-class-parentheses-space-inside": "never",
         "selector-pseudo-element-colon-notation": ["single", {
-            message: ["Doble para IE8. Estamos en 2016."]
+            message: ["Doble para IE8. Estamos en 2016"]
         }],
         "selector-pseudo-element-no-unknown": true,
         "selector-type-no-unknown": true,
