--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-babel": "^7.0.1",
+    "gulp-changed": "^3.2.0",
     "gulp-cssnano": "^2.1.2",
     "gulp-imagemin": "^3.3.0",
     "gulp-inline-source": "^3.1.0",
+    "gulp-minify": "^3.1.0",
     "gulp-newer": "^1.3.0",
     "gulp-notify": "^3.0.0",
     "gulp-postcss": "^7.0.0",
@@ -49,6 +51,7 @@
     "postcss-reporter": "^4.0.0",
     "postcss-sorting": "^3.0.1",
     "pre-commit": "^1.2.2",
+    "pump": "^3.0.0",
     "stylelint": "^8.0.0"
   }
 }
