--- a/now.json
+++ b/now.json
@@ -2,7 +2,8 @@
     "name": "Bislai",
     "env":
     {
-        "NODE_ENV": "production"
+        "NODE_ENV": "production",
+        "MAPBOX": "@mapboxkey"
     },
     "alias": [
         "bislai.co"
