--- a/package.json
+++ b/package.json
@@ -26,31 +26,31 @@
     "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.18.13",
     "debounce": "^1.1.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^4.0.0",
-    "gulp-babel": "^7.0.1",
+    "gulp": "^4.0.0",
+    "gulp-autoprefixer": "^6.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-changed": "^3.2.0",
     "gulp-cssnano": "^2.1.2",
-    "gulp-imagemin": "^3.3.0",
-    "gulp-inline-source": "^3.1.0",
+    "gulp-imagemin": "^5.0.3",
+    "gulp-inline-source": "^4.0.0",
     "gulp-minify": "^3.1.0",
     "gulp-newer": "^1.3.0",
     "gulp-notify": "^3.0.0",
-    "gulp-postcss": "^7.0.0",
+    "gulp-postcss": "^8.0.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^3.0.0",
-    "gulp-uncss": "^1.0.6",
-    "gulp-webp": "^2.3.0",
-    "lint-staged": "^4.0.2",
-    "postcss-custom-properties": "^6.1.0",
-    "postcss-custom-selectors": "^4.0.1",
-    "postcss-import": "^10.0.0",
-    "postcss-nested": "^2.0.4",
+    "gulp-webp": "^4.0.0",
+    "lint-staged": "^8.1.0",
+    "postcss-custom-properties": "^8.0.9",
+    "postcss-custom-selectors": "^5.1.2",
+    "postcss-import": "^12.0.1",
+    "postcss-nested": "^4.1.1",
     "postcss-pxtorem": "^4.0.1",
-    "postcss-reporter": "^4.0.0",
-    "postcss-sorting": "^3.0.1",
+    "postcss-reporter": "^6.0.1",
+    "postcss-sorting": "^4.0.1",
     "pre-commit": "^1.2.2",
     "pump": "^3.0.0",
-    "stylelint": "^8.0.0"
-  }
+    "stylelint": "^9.10.0"
+  },
+  "dependencies": {}
 }
