--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "base-d3",
-  "version": "2.0.0",
-  "description": "base para cualquier proyecto de visualización de datos | Jorge Aznar {data/designer} http://jorgeatgu.com",
+  "name": "base",
+  "version": "3.0.0",
+  "description": "Base for any project of Jorge Aznar, {data/designer} based on Zaragoza ⦉ http://jorgeatgu.com ⦊",
   "main": "gulpfile.js",
   "repository": "jorgeatgu/base",
   "keywords": [
@@ -20,37 +20,34 @@
     "lint-staged": "lint-staged",
     "build:release": "gulp build"
   },
+  "browserslist": "last 2 versions",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "browser-sync": "^2.18.13",
-    "debounce": "^1.1.0",
-    "gulp": "^4.0.0",
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "browser-sync": "^2.26.3",
+    "dotenv": "^8.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-babel": "^8.0.0",
-    "gulp-changed": "^3.2.0",
-    "gulp-cssnano": "^2.1.2",
+    "gulp-cssnano": "^2.1.3",
     "gulp-imagemin": "^5.0.3",
-    "gulp-inline-source": "^4.0.0",
-    "gulp-minify": "^3.1.0",
-    "gulp-newer": "^1.3.0",
-    "gulp-notify": "^3.0.0",
+    "gulp-newer": "^1.4.0",
+    "gulp-notify": "^3.2.0",
     "gulp-postcss": "^8.0.0",
-    "gulp-sourcemaps": "^2.6.0",
-    "gulp-uglify": "^3.0.0",
-    "gulp-webp": "^4.0.0",
-    "lint-staged": "^8.1.0",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-terser": "^1.1.7",
+    "lint-staged": "^8.1.5",
     "postcss-custom-properties": "^8.0.9",
     "postcss-custom-selectors": "^5.1.2",
     "postcss-import": "^12.0.1",
-    "postcss-nested": "^4.1.1",
-    "postcss-pxtorem": "^4.0.1",
+    "postcss-nested": "^4.1.2",
+    "postcss-normalize": "^7.0.1",
     "postcss-reporter": "^6.0.1",
-    "postcss-sorting": "^4.0.1",
+    "postcss-sorting": "^4.1.0",
     "pre-commit": "^1.2.2",
-    "pump": "^3.0.0",
-    "stylelint": "^9.10.0"
-  },
-  "dependencies": {}
+    "prettier": "^1.16.4",
+    "stylelint": "^9.10.1"
+  }
 }
